2011-12-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ConvolveImage): For Q8 and Q16 builds use
	'float' rather than 'double' for computations in order to improve
	performance with some compilers.

2011-12-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ConvolveImage): Special-case grayscale images
	for better convolution performance.

2011-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkUsage): -stepthreads now requires an
	argument which is the increment (starting at zero) to the number
	of threads for each step.  This hastens benchmarking with a large
	number of cores.

2011-12-07  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/png.c: Eliminate use of FARDATA.  It's no longer needed
	and will no longer be supplied by png.h in libpng-1.6.0.

2011-12-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkImageCommand): Added Karp-Flatt
	metric to benchmark output.

2011-12-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick.spec.in: Eliminate use of deprecated BuildPrereq
	in RPM spec file.

2011-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (WriteImagesFile): Should set file in
	ImageInfo based on provided parameter rather than relying on it
	already being set.  File argument was not being used.

2011-11-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c: For packed 10 bits, datums are now represented in
	the same (reversed) order for all RGB and YCbCr formats.
	Previously YCbCr 4:4:4 formats were not swapping the word datums
	because the only real-world files encountered did not swap the
	word datums.  Resolves SourceForge bug 2057277 "DPX 10bit CbYCr
	Image seems to be wrong".

	* wand/magick_wand.c (MagickWriteImagesFile): New function to
	append images to a provided file handle.  Resolves SourceForge
	issue 3046868 "added MagickWriteImagesFile".
